--- a/app/assets/stylesheets/admin/pages/referrals.scss
+++ b/app/assets/stylesheets/admin/pages/referrals.scss
@@ -94,6 +94,10 @@
     letter-spacing: 0.5px;
     font-size: 14px;
 
+    .selectable {
+      cursor: pointer;
+    }
+
     tr {
       border-bottom: solid 1px rgba(0, 0, 0, 0.2);
       border-top: solid 1px rgba(0, 0, 0, 0.2);
