--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -164,6 +164,10 @@
       letter-spacing: 0.5px;
       font-size: 14px;
 
+      .selectable {
+        cursor: pointer;
+      }
+
       tr {
         border-bottom: solid 1px rgba(0, 0, 0, 0.2);
         border-top: solid 1px rgba(0, 0, 0, 0.2);
@@ -208,7 +212,7 @@
         font-weight: bold;
         padding: 2px 10px;
         -webkit-appearance: none;
-     }
+      }
     }
 
     .promo-panel-number {
