--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -40,17 +40,21 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
                 .bat-logo
                   = image_tag("bat-logo@2x.png", class: "", width: 60, height: 60)
                 .amounts
+                  - converted_balance = publisher_converted_overall_balance(@publisher)
                   h4.balance-header
                     span = t(".balance_pending")
                   .bat
                     span.bat-amount#bat_amount = publisher_overall_bat_balance(@publisher)
                     span.bat-code= " " + I18n.t(".bat_in_locale")
                   .converted#converted_amount
-                    = publisher_converted_overall_balance(@publisher)
+                    = converted_balance
                   - if payout_in_progress?
                     .payout_in_progress
                       span
-                        i = t(".payout_in_progress")
+                        - if converted_balance.present? && converted_balance.to_i>= PayoutReport::MINIMUM_BALANCE_AMOUNT
+                          i = t(".payout_in_progress")
+                        - else
+                          i = t(".payout_minimum_balance", amount: PayoutReport::MINIMUM_BALANCE_AMOUNT, currency: t("bat_in_locale"))
                   - else
                     .next_deposit_date.small.mt-2
                       span = t(".next_deposit_date")
