--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -11,6 +11,49 @@
   margin-bottom: 30px;
 }
 
+.selectable + .selectable {
+  margin: 8px 0;
+}
+
+.selectable {
+  background: rgba(0, 0, 0, 0.05);
+  border: 1px solid inherit;
+  border-radius: $brave-panels-borderRadius;
+
+  font-weight: 600;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 3px 8px;
+  letter-spacing: 0.02em;
+}
+
+.selected {
+  background: rgba(255, 255, 255, 0.15);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+
+  a {
+    color: white;
+  }
+
+  .promo-panel-number {
+    color: white !important;
+  }
+
+  @media (max-width: 960px) {
+    svg {
+      transform: rotate(90deg);
+      -webkit-transform: rotate(90deg);
+      -moz-transform: rotate(90deg);
+      -ms-transform: rotate(90deg);
+      -o-transform: rotate(90deg);
+    }
+  }
+}
+
 .brave-rewards-banner {
   &--background {
     &-label {
@@ -133,7 +176,6 @@
       display: flex;
       flex-direction: column-reverse;
       justify-content: space-between;
-
     }
 
     @media only screen and (max-width: 400px) {
@@ -164,10 +206,6 @@
       letter-spacing: 0.5px;
       font-size: 14px;
 
-      .selectable {
-        cursor: pointer;
-      }
-
       tr {
         border-bottom: solid 1px rgba(0, 0, 0, 0.2);
         border-top: solid 1px rgba(0, 0, 0, 0.2);
@@ -195,19 +233,17 @@
       }
     }
 
-    .promo-selected {
-      color: rgb(27, 29, 47);
-    }
-
     .promo-period {
       background: rgba(255, 255, 255, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.2);
       padding: 5px 10px;
       font-weight: 600;
 
       border-radius: $brave-panels-borderRadius;
+
       select {
         border: 0;
-        color: #EEE;
+        color: #eee;
         background: transparent;
         font-weight: bold;
         padding: 2px 10px;
@@ -216,6 +252,7 @@
     }
 
     .promo-panel-number {
+      padding-left: 10px;
       text-align: right;
       font-weight: 600;
       font-size: 30px;
@@ -1271,11 +1308,16 @@ h6 {
     &.animated {
       animation: colorchange 3s linear infinite;
 
-      @keyframes colorchange
-      {
-        0%   {background: $braveBrand;}
-        50%   {background: $braveBrand-Light;}
-        100%   {background: $braveBrand;}
+      @keyframes colorchange {
+        0% {
+          background: $braveBrand;
+        }
+        50% {
+          background: $braveBrand-Light;
+        }
+        100% {
+          background: $braveBrand;
+        }
       }
     }
   }
@@ -1293,5 +1335,4 @@ h6 {
   progress::-webkit-progress-value {
     background: $braveBrand;
   }
-
 }
