--- a/app/assets/stylesheets/admin/pages/publisher.scss
+++ b/app/assets/stylesheets/admin/pages/publisher.scss
@@ -170,3 +170,59 @@
     color: $braveGray-6;
   }
 }
+
+.payout-progress {
+  display: flex;
+  align-items: center;
+
+  .icon {
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+
+    &.active {
+      background: $braveBrand;
+    }
+
+    &.inactive {
+      border: 1px solid $braveGray-8;
+    }
+
+    &.animated {
+      animation: colorchange 3s linear infinite;
+
+      @keyframes colorchange {
+        0% {
+          background: $braveBrand;
+        }
+        50% {
+          background: $braveBrand-Light;
+        }
+        100% {
+          background: $braveBrand;
+        }
+      }
+    }
+  }
+
+  progress {
+    width: auto;
+    flex-grow: 1;
+    height: 1px;
+    background: $braveGray-8;
+    -webkit-appearance: none;
+  }
+  progress::-webkit-progress-bar {
+    background: $braveGray-8;
+  }
+  progress::-webkit-progress-value {
+    background: $braveBrand;
+  }
+}
+
+
+.dashboard-panel--header {
+  font-size: 28px;
+  color: #5e6175;
+  font-weight: bold;
+}
