--- a/app/views/publishers/_payout_status.html.slim
+++ b/app/views/publishers/_payout_status.html.slim
@@ -1,5 +1,5 @@
 .dashboard-panel--wrapper
-  - payout_warning = payout_warning(payout_report)
+  - payout_warning = payout_warning(payout_report, publisher)
   .dashboard-panel--header= t('.heading')
   - if Rails.cache.fetch("payout_report_generating")
     .alert.alert-info
@@ -16,7 +16,7 @@
         = t('.amount')
         small *
       h4.font-weight-light
-        span= payout_amount(payout_report)
+        span= payout_amount(payout_report, publisher)
         small.font-weight-light= " " + I18n.t(".bat_in_locale")
 
       / We're going to do some magic to make the user feel like things are actually happening
@@ -36,6 +36,7 @@
 
       .pt-2
         = t('.description')
-      .mt-4
-        small=t('.amount_description', time: payout_report.created_at.strftime("%Y-%m-%d"))
+
+    .mt-4
+      small=t('.amount_description', time: payout_report.created_at.strftime("%Y-%m-%d"))
 
