--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -101,7 +101,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     - if @payout_report.present?
       .row
        .col-md.mb-4
-         = render partial: 'payout_status', locals: { payout_report: @payout_report }
+         = render partial: 'payout_status', locals: { payout_report: @payout_report, publisher: @publisher }
     .row
       .col-md.mb-4
         - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]) || @publisher.uphold_connection&.japanese_account?)
