Initial view setup

--- a/app/assets/stylesheets/pages/site-channels.scss
+++ b/app/assets/stylesheets/pages/site-channels.scss
@@ -37,6 +37,18 @@
   }
 }
 
+#learn-more-label {
+  margin-left: 5px;
+  margin-right: 3px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+#site-channel-ads-learn-more-button {
+  font-weight: bold;
+  font-size: 14px;
+}
+
 #wordpress_escape_hatch {
   opacity: .7;
   font-size: 12px;
