--- a/app/assets/stylesheets/pages/site-channels.scss
+++ b/app/assets/stylesheets/pages/site-channels.scss
@@ -37,16 +37,20 @@
   }
 }
 
-#learn-more-label {
-  margin-left: 5px;
-  margin-right: 3px;
+.learn-more {
+  margin-top: 4px;
   font-weight: bold;
   font-size: 14px;
+  #label {
+    margin-left: 5px;
+  }
+  &.extended {
+    margin-left: 10px;
+  }
 }
 
 #site-channel-ads-learn-more-button {
-  font-weight: bold;
-  font-size: 14px;
+  margin-left: 3px;
 }
 
 #wordpress_escape_hatch {
