--- a/app/views/site_channels/_site_channel_ads_learn_more_modal.html.slim
+++ b/app/views/site_channels/_site_channel_ads_learn_more_modal.html.slim
@@ -1,9 +1,5 @@
-p Brave’s Publisher Ads is currently in development and being tested with select partners. All publishers are eligible to apply. To do so, select the option to “Allow Brave to serve ads on my web site” when registering a new web site channel on creators.brave.com. The option is also available on the Creators dashboard.
+p Brave shares 70% of the revenue from our new privacy-preserving Publisher Ads with content providers. The project is currently in development and being tested with select partners. Brave’s Publisher Ads are available on an opt-in only basis, and you can cancel at any time. There is no obligation to sign up.
 
-p [screenshot]
-
-p There is no obligation to sign up, and Brave’s Publisher Ads are available on an opt-in only basis.
-
-p Publishers who wish to cancel Brave’s Publisher Ads can revoke their consent at any time by xlogging into the Creators web site and de-selecting the option to “Allow Brave to serve ads on my web site.”
+p Read more about it [here](https://basicattentiontoken.org/brave-previews-opt-in-ads-in-desktop-browser-developer-channel/).
 
 p Publisher Ads will be available more widely soon. So, please keep an eye out for more information as it becomes available.
