Put modal in locales file

--- a/app/views/site_channels/_site_channel_ads_learn_more_modal.html.slim
+++ b/app/views/site_channels/_site_channel_ads_learn_more_modal.html.slim
@@ -1,5 +1,1 @@
-p Brave shares 70% of the revenue from our new privacy-preserving Publisher Ads with content providers. The project is currently in development and being tested with select partners. Brave’s Publisher Ads are available on an opt-in only basis, and you can cancel at any time. There is no obligation to sign up.
-
-p Read more about it [here](https://basicattentiontoken.org/brave-previews-opt-in-ads-in-desktop-browser-developer-channel/).
-
-p Publisher Ads will be available more widely soon. So, please keep an eye out for more information as it becomes available.
+= t(".").html_safe
