--- a/app/assets/stylesheets/pages/site-channels.scss
+++ b/app/assets/stylesheets/pages/site-channels.scss
@@ -37,6 +37,22 @@
   }
 }
 
+.learn-more {
+  margin-top: 4px;
+  font-weight: bold;
+  font-size: 14px;
+  #label {
+    margin-left: 5px;
+  }
+  &.extended {
+    margin-left: 10px;
+  }
+}
+
+#site-channel-ads-learn-more-button {
+  margin-left: 3px;
+}
+
 #wordpress_escape_hatch {
   opacity: .7;
   font-size: 12px;
