Make slider look right

--- a/app/assets/stylesheets/theme/form.scss
+++ b/app/assets/stylesheets/theme/form.scss
@@ -63,4 +63,7 @@ input:checked + .slider.round:before {
 .slider.round {
   border-radius: 3px;
   height: 8px;
+  &.extended {
+    margin-top: 3px;
+  }
 }
