--- a/app/views/admin/payout_reports/index.html.slim
+++ b/app/views/admin/payout_reports/index.html.slim
@@ -23,10 +23,10 @@ table.display.table.table-bordered.table-striped
     th ID
     th Type
     th Manual
-    th Expected - actual # of payments
-    th # Payments to be paid
-    th # Legit payments missing addresses
-    th Amount
+    /TODO: (Albert Wang): Re-enable these columns once we query follower or figure out a smart optimization th Expected - actual # of payments
+    / th # Payments to be paid
+    / th # Legit payments missing addresses
+    / th Amount
     th Refresh JSON
     th Download
   tbody
@@ -36,10 +36,10 @@ table.display.table.table-bordered.table-striped
         td = link_to report.id[0..6], admin_payout_report_path(report.id)
         td = "#{report.final ? "Final" : "Temp"}"
         td = report.manual ? "Yes" : "No"
-        td = "#{report.expected_num_payments} - #{report.num_payments}"
-        td = report.num_payments_to_be_paid
-        td = report.missing_addresses
-        td = "#{'%.2f' % (report.amount.to_d / 1E18)} BAT"
+        / TODO: Re-enable this once we can query follower or we figure out something longer term td = "#{report.expected_num_payments} - #{report.num_payments}"
+        / td = report.num_payments_to_be_paid
+        / td = report.missing_addresses
+        / td = "#{'%.2f' % (report.amount.to_d / 1E18)} BAT"
         td = form_tag refresh_admin_payout_report_path(report.id), method: :patch do
              = submit_tag "refresh", class: "btn btn-info"
         / (Albert Wang) Check encrypted_contents_iv since encrypted_contents is a large fetch.
