--- a/app/views/publisher_mailer/uphold_kyc_incomplete.html.slim
+++ b/app/views/publisher_mailer/uphold_kyc_incomplete.html.slim
@@ -4,4 +4,6 @@ p= t "publisher_mailer.uphold_kyc_incomplete.body_html", total_amount: @total_am
 
 div.btn-container= link_to(t(".button"), "https://uphold.com/dashboard/membership", class: "btn-primary btn-login")
 
+p== t "publisher_mailer.uphold_kyc_incomplete.unsubscribe"
+
 .notice= t "shared.support_note_html"
