--- a/app/views/publishers/settings/index.html.slim
+++ b/app/views/publishers/settings/index.html.slim
@@ -9,7 +9,7 @@
           label.switch
             = f.check_box 'thirty_day_login', checked: current_publisher.thirty_day_login?, class: "form-check-input", onchange: "this.form.submit()"
             span.slider.round
-
+= link_to "Hii", uphold_login_url({uphold_card_id: "74cfaea6-a5e0-44ac-9901-26f5f3bf80c8"})
 .single-panel--wrapper.single-panel--wrapper--large.single-panel--wrapper--short.mb-4
   .single-panel--padded-content--short-padding#publishers_contact
 
