--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -36,7 +36,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
           .row
             .col
               .balance.px-4.pt-4
-                .bat-logo
+                .bat-logo#bat-logo
                   = image_tag("bat-logo@2x.png", class: "", width: 60, height: 60)
                 .amounts
                   - converted_balance = publisher_converted_overall_balance(@publisher)
