--- a/app/views/admin/publishers/edit.html.slim
+++ b/app/views/admin/publishers/edit.html.slim
@@ -15,6 +15,7 @@
           = f.check_box :excluded_from_payout, {}, checked: @publisher.excluded_from_payout?
           = " Uphold widget disabled"
           br
+        label
           = f.check_box :wire_only, {}, checked: @publisher.wire_only?
           = " Wire transfers only (also disables uphold and paypal widgets)"
 
