--- a/app/assets/stylesheets/pages/browser_user_home.scss
+++ b/app/assets/stylesheets/pages/browser_user_home.scss
@@ -22,8 +22,10 @@
 
   &--step-description {
     margin-right: 10px;
-    color: #ffffff;
-    font-size: 16px;
-    font-family: Poppins-Regular;
+    p {
+      color: #ffffff;
+      font-size: 16px;
+      font-family: Poppins-Regular;
+    }
   }
 }
