--- a/app/views/browser_users/_how_it_works.html.slim
+++ b/app/views/browser_users/_how_it_works.html.slim
@@ -16,3 +16,15 @@
       = image_tag("step_3", width: 32, height: 32)
     .how-it-works--step-description
       p Come visit this page to check your referral progress. Your bonus will be paid out on the 8th of every month.
+  hr
+
+  center.referral-header
+    h5 Your unique referral link
+  .referral-link.d-flex.flex-row
+    p id="#{@promo_registration.referral_code}" = https_referral_url(@promo_registration.referral_code)
+    button.copy-button.share-promo-button data-clipboard-target="##{@promo_registration.referral_code}" = t("promo.shared.copy")
+  br
+  center
+    = link_to("Terms & Conditions", "https://basicattentiontoken.org/publisher-terms-of-service/")
+
+script src="dist/clipboard.min.js"
