--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -450,6 +450,11 @@
         margin-top: 5px;
       }
     }
+    &--browser-user {
+      height: 220px;
+      margin-left: 15px;
+      margin-bottom: 20px;
+    }
 
     &--header-with-image {
       margin-left: -10px;
