--- a/app/views/browser_users/home.html.slim
+++ b/app/views/browser_users/home.html.slim
@@ -6,4 +6,5 @@
     .p-2
       = render partial: 'how_it_works', referral_code: @promo_registration
     .p-2
+      = render partial: 'pending_balance'
       = render partial: 'promo_panel'
