--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -613,6 +613,11 @@
             font-size: 30px;
             color: $braveBrand;
             font-weight: 500;
+            &--browser-user {
+              font-size: 30px;
+              color: $braveBrand;
+              font-weight: 500;
+            }
           }
 
           .bat-code {
