--- a/app/assets/stylesheets/pages/browser_user_home.scss
+++ b/app/assets/stylesheets/pages/browser_user_home.scss
@@ -3,6 +3,10 @@
   margin-top: 45px;
   margin-bottom: 30px;
 }
+.bat-referral-balance-box {
+  margin-top: 0px;
+}
+
 .pending-balance {
   &--panel {
     height: 200px;
