--- a/app/assets/stylesheets/pages/browser_user_home.scss
+++ b/app/assets/stylesheets/pages/browser_user_home.scss
@@ -5,14 +5,9 @@
 }
 .bat-referral-balance-box {
   margin-top: 0px;
+  padding-top: 5px;
 }
 
-.pending-balance {
-  &--panel {
-    height: 200px;
-    width: 400px;
-  }
-}
 .how-it-works {
   &--panel {
     height: 530px;
