--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -451,7 +451,9 @@
       }
     }
     &--browser-user {
-      height: 220px;
+      padding: 28px;
+      min-width: 250px;
+      height: 200px;
       margin-left: 15px;
       margin-bottom: 20px;
     }
