--- a/app/views/browser_users/_pending_balance.html.slim
+++ b/app/views/browser_users/_pending_balance.html.slim
@@ -16,7 +16,7 @@
           i = t(".payout_in_progress")
     - else
       .next_deposit_date.small
-        span.bold = "Next deposit date: "
+        span.bold = t(".next_deposit_date")
         span = next_deposit_date
 / We might want to enable last deposit in the future, so instead of trying to re-dig up the code
 / These lines should be uncommented
