Feature: Sign-in as a browser user. Closes #2550 (#2598)
* Feature: Sign-in as a browser user. Closes #2550 
* IP whitelist only

Co-Authored-By: Cory McDonald <cmcdonald@brave.com>

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -54,7 +54,7 @@ html
 
 
     #main
-      - if !request.original_url.include? "/partners/"
+      - unless request.path.starts_with?("/partners") ||  request.path.starts_with?("/browser_user")
         - if content_for?(:nav)
           = yield(:nav)
         - else
