--- a/app/assets/stylesheets/theme/nav.scss
+++ b/app/assets/stylesheets/theme/nav.scss
@@ -133,6 +133,7 @@
           .user-links-lock {
             position: relative;
             padding: 0 25px;
+            display: flex;
 
             .user-links-lock-icon {
               position: absolute;
