--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -1108,6 +1108,48 @@
   }
 }
 
+.modal-container--modal-identifier--new_secret_key {
+  min-width: 500px;
+
+  .modal-panel {
+    padding: 0;
+    margin: 0;
+    width: inherit;
+    max-width: inherit;
+    min-width: inherit;
+
+    &--close {
+      position: absolute;
+      right: 20px;
+      top: 12px;
+    }
+
+    &--content {
+      padding: 0;
+      margin: 0;
+    }
+  }
+
+  .header-box {
+    background: linear-gradient(
+        -225deg,
+        rgba(255, 255, 255, 0.5) 0%,
+        rgba(0, 0, 0, 0.2) 100%
+      )
+      rgb(76, 84, 210);
+    background: $braveBrand;
+    padding: 24px;
+    border-radius: 8px 8px 0 0;
+
+    h3,
+    p {
+      color: #fff;
+      margin: 8px;
+      padding: 0;
+    }
+  }
+}
+
 .modal-container--modal-identifier--choose-channel-type {
   max-width: 960px;
   width: 100%;
