changes .bottom-swoop width from 100vw to 100%

--- a/public/creators-landing/src/style/style.css
+++ b/public/creators-landing/src/style/style.css
@@ -84,7 +84,7 @@ h4 {
 .bottom-swoop {
   position: absolute;
   bottom: -2px;
-  width: 100vw !important;
+  width: 100% !important;
   z-index: 0;
 }
 
