--- a/app/views/partner_mailer/notify_bizdev_invoice_file_added.html.slim
+++ b/app/views/partner_mailer/notify_bizdev_invoice_file_added.html.slim
@@ -8,7 +8,7 @@ p
   - if @organization_name.present?
     span = "from #{@organization_name} "
   span= "has added a new file to their "
-  = link_to "#{@invoice.human_date} invoice.",admin_partner_invoice_url(@invoice, partner_id: @publisher.id)
+  = link_to "#{@invoice.human_date} invoice.", admin_publisher_invoice_url(@invoice, publisher_id: @publisher.id)
 
 p Here's a handy link to view the file
 = link_to @invoice_file.file.filename, rails_blob_url(@invoice_file.file, disposition: "attachment")
