--- a/app/views/admin/invoices/edit.html.slim
+++ b/app/views/admin/invoices/edit.html.slim
@@ -1,8 +1,8 @@
 h2= "Edit #{@invoice.human_date} Invoice"
-h5= "Partner: #{@invoice.partner.name}"
+h5= "Publisher: #{@invoice.partner.name}"
 
 
-= form_with model: [:admin, :partner, @invoice], local: true do |form|
+= form_with model: [:admin, :publisher, @invoice], local: true do |form|
   - if @invoice.errors.any?
     ul
       - @invoice.errors.full_messages.each do |msg|
@@ -13,6 +13,6 @@ h5= "Partner: #{@invoice.partner.name}"
     = form.text_field :amount, class: 'form-control', readonly: true
   .form-group
     label Brave Calculated Total Amount (BAT)
-    = form.number_field :finalized_amount, class: 'form-control'
+    = form.text_field :finalized_amount, class: 'form-control'
 
   = submit_tag "Save Invoice", class: "btn btn-primary"
