--- a/app/views/admin/publishers/show.html.slim
+++ b/app/views/admin/publishers/show.html.slim
@@ -109,7 +109,7 @@ hr
   .c-4.shadow-sm.bg-white.rounded.p-3.my-4
     = render partial: 'uphold'
 
-  -if @publisher.partner?
+  -if @publisher.invoice?
     .c-4.shadow-sm.bg-white.rounded.p-3.my-4
       =render partial: "invoices", locals: { partner: @publisher.becomes(Partner), limit:  params[:view_more].present? ? nil : 3 }
 
