--- a/app/views/admin/invoices/new.html.slim
+++ b/app/views/admin/invoices/new.html.slim
@@ -1,5 +1,5 @@
 
-h2= "Request Invoice for #{@invoice.partner}"
+h2= "Request Invoice for #{@invoice.publisher}"
 
 
 = form_with model: [:admin, :publisher, @invoice], local: true do |form|
