--- a/app/views/admin/publishers/_invoices.html.slim
+++ b/app/views/admin/publishers/_invoices.html.slim
@@ -1,7 +1,7 @@
 .d-flex.mb-3
-  h3 = "Invoices"
+  h3.text-dark Invoices
   .ml-3
-    = link_to "Request Invoice", admin_publisher_invoices_path(publisher_id: partner.id), class: 'btn btn-primary'
+    = link_to "Request Invoice", new_admin_publisher_invoice_path(publisher_id: publisher.id), class: 'btn btn-primary'
 table.display.table.table-bordered.table-striped
   tr
     th Date
@@ -10,9 +10,9 @@ table.display.table.table-bordered.table-striped
     th Brave Calculated Total Amount (BAT)
     th Payment Date
   tbody
-  - partner.invoices.order(date: :desc).limit(limit).each do |invoice|
+  - publisher.invoices.order(date: :desc).limit(limit).each do |invoice|
     tr.gradeX
-      td = link_to invoice.human_date, admin_publisher_invoice_path(publisher_id: partner.id, id: invoice.id)
+      td = link_to invoice.human_date, admin_publisher_invoice_path(publisher_id: publisher.id, id: invoice.id)
       td = invoice.status
       td = invoice.amount
       td = invoice.finalized_amount
@@ -30,7 +30,7 @@ table.display.table.table-bordered.table-striped
       /   - unless report.paid?
       /     = link_to("Pay", edit_admin_publisher_path(@publisher), class: "btn btn-link")
 
-- if limit && partner.invoices.count > limit
-  = link_to "View more", admin_publisher_path(partner.id, view_more: true)
+- if limit && publisher.invoices.count > limit
+  = link_to "View more", admin_publisher_path(publisher.id, view_more: true)
 
 
